--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,10 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+{% if form.errors %}
+    {% include 'form_error.html' %}
+{% else %}
     <form action="{% url 'blog:update' pk=post.pk %}" method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="수정">
     </form>
     <a href="{% url 'blog:detail' pk=post.pk %}">취소</a>
+{% endif %}
 {% endblock %}
