--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10798,3 +10798,9 @@ header.masthead .post-heading .meta a {
 }
 .container .text-break {
 }
+p label {
+  display: block;
+}
+p label + input {
+  margin-top: 1rem;
+}
