--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,10 @@
 <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="{% url 'blog:list' %}">Blog</a>
+        <form action="{% url 'blog:cg-search' %}" method="get">
+            {{ category_form.as_p }}
+            <input type="submit" value="검색">
+        </form>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             메뉴
             <i class="fas fa-bars"></i>
