--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,11 +10,7 @@
                         <h1>{{ post.title }}</h1>
                         <span class="meta">
                             Posted by
-                            {% if post.writer %}
-                                <a href="">{{ post.writer }}</a>
-                            {% else %}
-                                <p>익명</p>
-                            {% endif %}
+                            <a href="">{{ post.writer }}</a>
                             on {{ post.created_at }}
                         </span>
                     </div>
@@ -44,9 +40,11 @@
         <div class="container px-4 px-lg-5 mt-2">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-md-10 col-lg-8 col-xl-7 py-sm-2 text-end">
-                    <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:cg-update' pk=post.pk %}">카테고리 관리</a>
-                    <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:update' pk=post.pk %}">수정</a>
-                    <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:delete' pk=post.pk %}">삭제</a>
+                    {% if post.writer == request.user %}
+                        <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:cg-update' pk=post.pk %}">카테고리 관리</a>
+                        <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:update' pk=post.pk %}">수정</a>
+                        <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:delete' pk=post.pk %}">삭제</a>
+                    {% endif %}
                     <a class="btn btn-primary text-uppercase mt-4" href="{% url 'blog:list' %}">목록</a>
                 </div>
             </div>
