회원가입 로그인 페이지 부트스트랩 적용

--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -6,7 +6,8 @@
     <!-- 내용 -->
     <form action="{% url 'blog:write' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        {{ post_form.as_p }}
+        {{ category_form.as_p }}
         <input type="submit" value="작성완료">
     </form>
     <a href="{% url 'blog:list' %}">취소</a>
